wgsl_bindgen/src/generate/bind_group/snapshots/bind_groups_module_array_bindings.snap
---
source: wgsl_bindgen/src/generate/bind_group/mod.rs
---
#[derive(Debug)]
pub struct WgpuBindGroup0EntriesParams<'a> {
  pub transforms: wgpu::BufferBinding<'a>,
  pub texture_array: &'a [&'a wgpu::TextureView],
  pub sampler_array: &'a [&'a wgpu::Sampler],
}
impl<'a> WgpuBindGroup0EntriesParams<'a> {
  pub fn into_entries(self) -> WgpuBindGroup0Entries<'a> {
    self.into()
  }
  pub fn into_array(self) -> [wgpu::BindGroupEntry<'a>; 3] {
    self.into_entries().into_array()
  }
  pub fn collect<B: FromIterator<wgpu::BindGroupEntry<'a>>>(self) -> B {
    self.into_entries().collect()
  }
}
#[derive(Clone, Debug)]
pub struct WgpuBindGroup0Entries<'a> {
  pub transforms: wgpu::BindGroupEntry<'a>,
  pub texture_array: wgpu::BindGroupEntry<'a>,
  pub sampler_array: wgpu::BindGroupEntry<'a>,
}
impl<'a> WgpuBindGroup0Entries<'a> {
  pub fn new(params: WgpuBindGroup0EntriesParams<'a>) -> Self {
    Self {
      transforms: wgpu::BindGroupEntry {
        binding: 0,
        resource: wgpu::BindingResource::Buffer(params.transforms),
      },
      texture_array: wgpu::BindGroupEntry {
        binding: 1,
        resource: wgpu::BindingResource::TextureViewArray(params.texture_array),
      },
      sampler_array: wgpu::BindGroupEntry {
        binding: 2,
        resource: wgpu::BindingResource::SamplerArray(params.sampler_array),
      },
    }
  }
  pub fn into_array(self) -> [wgpu::BindGroupEntry<'a>; 3] {
    [self.transforms, self.texture_array, self.sampler_array]
  }
  pub fn collect<B: FromIterator<wgpu::BindGroupEntry<'a>>>(self) -> B {
    self.into_array().into_iter().collect()
  }
}
impl<'a> From<WgpuBindGroup0EntriesParams<'a>> for WgpuBindGroup0Entries<'a> {
  fn from(params: WgpuBindGroup0EntriesParams<'a>) -> Self {
    Self::new(params)
  }
}
#[derive(Clone, Debug, Eq, Hash, Ord, PartialOrd, PartialEq)]
pub struct WgpuBindGroup0(wgpu::BindGroup);
impl WgpuBindGroup0 {
  pub const LAYOUT_DESCRIPTOR: wgpu::BindGroupLayoutDescriptor<'static> =
    wgpu::BindGroupLayoutDescriptor {
      label: Some("Test::BindGroup0::LayoutDescriptor"),
      entries: &[
        #[doc = " @binding(0): \"transforms\""]
        wgpu::BindGroupLayoutEntry {
          binding: 0,
          visibility: wgpu::ShaderStages::VERTEX_FRAGMENT,
          ty: wgpu::BindingType::Buffer {
            ty: wgpu::BufferBindingType::Uniform,
            has_dynamic_offset: false,
            min_binding_size: std::num::NonZeroU64::new(std::mem::size_of::<
              _root::test::Transforms,
            >() as _),
          },
          count: None,
        },
        #[doc = " @binding(1): \"texture_array\""]
        wgpu::BindGroupLayoutEntry {
          binding: 1,
          visibility: wgpu::ShaderStages::VERTEX_FRAGMENT,
          ty: wgpu::BindingType::Texture {
            sample_type: wgpu::TextureSampleType::Float { filterable: true },
            view_dimension: wgpu::TextureViewDimension::D2,
            multisampled: false,
          },
          count: Some(std::num::NonZeroU32::new(4u32).unwrap()),
        },
        #[doc = " @binding(2): \"sampler_array\""]
        wgpu::BindGroupLayoutEntry {
          binding: 2,
          visibility: wgpu::ShaderStages::VERTEX_FRAGMENT,
          ty: wgpu::BindingType::Sampler(wgpu::SamplerBindingType::Filtering),
          count: Some(std::num::NonZeroU32::new(3u32).unwrap()),
        },
      ],
    };
  pub fn get_bind_group_layout(device: &wgpu::Device) -> wgpu::BindGroupLayout {
    device.create_bind_group_layout(&Self::LAYOUT_DESCRIPTOR)
  }
  pub fn from_bindings(device: &wgpu::Device, bindings: WgpuBindGroup0Entries) -> Self {
    let bind_group_layout = Self::get_bind_group_layout(device);
    let entries = bindings.into_array();
    let bind_group = device.create_bind_group(&wgpu::BindGroupDescriptor {
      label: Some("Test::BindGroup0"),
      layout: &bind_group_layout,
      entries: &entries,
    });
    Self(bind_group)
  }
  pub fn set(&self, pass: &mut impl SetBindGroup) {
    pass.set_bind_group(0, &self.0, &[]);
  }
  pub fn inner(&self) -> &wgpu::BindGroup {
    &self.0
  }
  pub unsafe fn from_raw(bind_group: wgpu::BindGroup) -> Self {
    Self(bind_group)
  }
}
#[doc = " Bind groups can be set individually using their set(render_pass) method, or all at once using `WgpuBindGroups::set`."]
#[doc = " For optimal performance with many draw calls, it's recommended to organize bindings into bind groups based on update frequency:"]
#[doc = "   - Bind group 0: Least frequent updates (e.g. per frame resources)"]
#[doc = "   - Bind group 1: More frequent updates"]
#[doc = "   - Bind group 2: More frequent updates"]
#[doc = "   - Bind group 3: Most frequent updates (e.g. per draw resources)"]
#[derive(Debug, Copy, Clone)]
pub struct WgpuBindGroups<'a> {
  pub bind_group0: &'a WgpuBindGroup0,
}
impl<'a> WgpuBindGroups<'a> {
  pub fn set(&self, pass: &mut impl SetBindGroup) {
    self.bind_group0.set(pass);
  }
}
